# APEX_Program

./: .env.example  .env.prod.example  .gitignore  README.md  compose.yaml  package-lock.json  package.json  update_vendor.py
backend/: entrypoint.sh  pyproject.toml
backend/apps/accounts/: admin.py  forms.py  models.py  views.py
backend/apps/accounts/admin/: __init__.py  user.py
backend/apps/accounts/migrations/: 0001_initial.py
backend/apps/api/: urls.py
backend/apps/conquests/: apps.py
backend/apps/daily/: apps.py  forms.py  urls.py  views.py
backend/apps/daily/admin/: __init__.py  admin_routine.py
backend/apps/daily/migrations/: 0001_initial.py  0002_alter_routineitem_description_and_more.py  0003_alter_daypage_sleep_time.py  0004_daypage_nap_time.py  0005_remove_daypage_nap_time_daypage_nap_duration.py
backend/apps/daily/models/: __init__.py  model_routine.py
backend/apps/daily/services/: calendar.py
backend/apps/gate/: apps.py  forms.py  signals.py  urls.py
backend/apps/profiles/: signals.py
backend/apps/tasks/: forms.py  signals.py
backend/auths/user/: admin.py  models.py
backend/core/: asgi.py  urls.py  wsgi.py
backend/core/settings/: base.py  dev.py  prod.py
backend/static/css/: admin_fix.css  gate.css  index.css  main.css
backend/static/js/: admin_habits.js  admin_tasks.js  gate.js  index.js  stats.js
backend/templates/: base.html
backend/templates/admin/: base_site.html
backend/templates/common/: _navbar.html
backend/templates/gate/: _form_main.html  _header.html  _modal_add_task.html  _routines.html  _tasks.html  gate.html  index.html
backend/templates/includes/: navbar.html
backend/templates/index/: _action_card.html  _calendar.html  _daily_discipline.html  _habit_tracker.html  _player_card.html  _sleep_rhythm.html  _stats_radar.html  index.html
backend/templates/layouts/: base.html
backend/templates/registration/: login.html  register.html
(+81 files in other folders)
